// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<ForwardRef(Link)
  className="navbar-brand"
  to="/"
>
  <img
    alt="layout.nav.home_logo_alt"
    height={30}
    src="/images/logo.svg?v=6.6"
    title="layout.nav.home_logo_alt"
    width={83}
  />
</ForwardRef(Link)>
`;

exports[`should render correctly: with logo 1`] = `
<ForwardRef(Link)
  className="navbar-brand"
  to="/"
>
  <img
    alt="layout.nav.home_logo_alt"
    height={30}
    src="http://sonarsource.com/custom-logo.svg"
    title="layout.nav.home_logo_alt"
    width={100}
  />
</ForwardRef(Link)>
`;

exports[`should render correctly: with logo and width 1`] = `
<ForwardRef(Link)
  className="navbar-brand"
  to="/"
>
  <img
    alt="layout.nav.home_logo_alt"
    height={30}
    src="http://sonarsource.com/custom-logo.svg"
    title="layout.nav.home_logo_alt"
    width="200"
  />
</ForwardRef(Link)>
`;
